update learning objectives

--- a/_data/ondemand/modules/analyses-seeds.yml
+++ b/_data/ondemand/modules/analyses-seeds.yml
@@ -4,14 +4,10 @@ live: true
 
 learningObjectives:
   - Explain the purposes of analyses in contrast to models
-  - Explain the appropriate use cases for a seed in a dbt project
-  - Compile analyses and find the compiled SQL in the targets folder
-  - Add a data file to the seed folder
-  - Materialize the seed as a table in the database using dbt seed
-  - Reference a seed in a model
-  - Configure the seeds for a project in a dbt_project.yml file
-  - Write documentation for seeds
-  - Configure tests for seeds
+  - Explain the role of seeds in a dbt project
+  - Write and compile analyses and find the compiled SQL in the targets folder
+  - Add a seed to a project and materialize in the data warehouse
+  - Select from, test, and documents seeds
 
 presentationName: false
 presentationSlug: 
