--- a/_data/ondemand/modules/docs.yml
+++ b/_data/ondemand/modules/docs.yml
@@ -31,22 +31,16 @@ pages:
     assetLink: https://fast.wistia.net/embed/iframe/n268hfvo7f?videoFoam=true
     assetType: video
       
-  - name: Writing documentation
+  - name: Writing documentation and Doc Blocks
     slug: writing-docs
-    assetName: false
-    assetLink:
-    assetType: video
-    
-  - name: Doc Blocks
-    slug: doc-blocks
-    assetName: false
-    assetLink:
+    assetName: Writing documentation and Doc Blocks
+    assetLink: https://fast.wistia.net/embed/iframe/lzfcavyyya?videoFoam=true
     assetType: video
 
   - name: Generate and View Documentation (Cloud - dev)
     slug: generate-docs
-    assetName: false
-    assetLink:
+    assetName: Generate Documentation in dbt Cloud Development
+    assetLink: https://fast.wistia.net/embed/iframe/68pp0k40ty?videoFoam=true
     assetType: video
 
   - name: Review
