update cloud assets

--- a/_data/ondemand/modules/set-up-cloud.yml
+++ b/_data/ondemand/modules/set-up-cloud.yml
@@ -35,4 +35,7 @@ pages:
     assetLink: https://fast.wistia.net/embed/iframe/0828jynq3v?videoFoam=true
     assetType: video
 
+  - name: Review
+    slug: review
+    assetName: false
     
