add feedback form

--- a/_data/ondemand/modules/tests.yml
+++ b/_data/ondemand/modules/tests.yml
@@ -46,4 +46,7 @@ pages:
     slug: review
     assetName: false
     assetLink:
-    assetType: 
+    assetType:
+    
+  - name: Feedback
+    slug: feedback 
