--- a/.gitignore
+++ b/.gitignore
@@ -9,3 +9,8 @@ etc/learn_setup/__pycache__
 etc/learn_setup/html_compiled
 etc/learn_setup/credentials.json
 etc/learn_setup/token.pickle
+/etc/learn_mailmerge/html
+/etc/snowflake/html_compiled
+/ete/snowflake/__pycache__
+credentials.json
+token.pickle
