Install www.getdbt.com using ssh url

--- a/.gitmodules
+++ b/.gitmodules
@@ -1,6 +1,6 @@
 [submodule "www.getdbt.com"]
 	path = www.getdbt.com
-	url = https://github.com/fishtown-analytics/www.getdbt.com
+	url = git@github.com:fishtown-analytics/www.getdbt.com.git
 	branch = cloud
 [submodule "reveal.js"]
 	path = reveal.js
