update config file for jumpstart collection

--- a/_config.yml
+++ b/_config.yml
@@ -46,6 +46,9 @@ collections:
   ondemand:
     output: true
     permalink: /:collection/:path
+  jumpstart:
+    output: true
+    permalink: /:collection/:path
 
 defaults:
 -
