Update links for October Learn

--- a/_data/links.yml
+++ b/_data/links.yml
@@ -1,4 +1,4 @@
-intros: https://docs.google.com/presentation/d/1vwkIlJ4WX6J-ukD95_Z4vDnpXdwC0XJ-u8zNCidcJVw/ ## Sep 16-17, 2020
-whiteboard: https://docs.google.com/document/d/1cvBcN6z_CD31t8mN9Q6Q0emxF1pZP6ohmuxjIu7QKtI/  ## Sep 16-17, 2020
-feedback: https://forms.gle/EovuB4W1KwbFgkdi6  ## Sep 16-17, 2020
-office_hours: "Friday, Sep 25, 1-2 pm EST"  ## Tentative
+intros: https://docs.google.com/presentation/d/1gjL9ImUQOszWPUHMePn-A93_FrtIuSo8ICmEk0B8k-E/present ## Oct 14-15, 2020
+whiteboard: https://docs.google.com/document/d/1CfVUJVgVPRLQLAz_phihJwZAyPIOMJHJg25mxSB78d0/edit  ## Oct 14-15, 2020
+feedback: https://forms.gle/s9myuQtwxAqeU1Wn7  ## Oct 14-15, 2020
+office_hours: "Friday, Oct 23, 10-11 am PST"  ## Tentative
