--- a/_data/ondemand/modules/macros.yml
+++ b/_data/ondemand/modules/macros.yml
@@ -1,13 +1,13 @@
 name: Macros
 slug: macros
-live: false
+live: true
 
 learningObjectives:
   - Explain the role of macros in a dbt project
-  - Negotiate the balance between readability and DRY-ness
-  - Explain how dbt uses macros in the existing sources and ref functions
   - Implement macros in a model file
-  - Write a macro for creating a pivot function
+  - Write a macro for converting from cents to dollars
+  - Write a macro for limiting data in development
+  - Negotiate the balance between readability and DRY-ness
 
 presentationName: dbtonic Jinja
 presentationSlug: dbtonic-jinja
@@ -25,23 +25,17 @@ pages:
     assetLink:
     assetType:
 
-  - name: "Example: ref macro"
-    slug: ref-macro
-    assetName: false
-    assetLink: 
-    assetType:
-
   - name: "Example: Currency Conversion"
     slug: currency-macro
-    assetName: false
-    assetLink: 
-    assetType:
+    assetName: Example - Currency Conversion
+    assetLink: https://fast.wistia.net/embed/iframe/f7czg56ysu
+    assetType: video
       
-  - name: "Example: Pivot Macro"
-    slug: pivot-macro
-    assetName: false
-    assetLink: 
-    assetType:
+  - name: "Example: Limit Data in Dev"
+    slug: dev-data-macro
+    assetName: Example - Limit Data in Dev
+    assetLink: https://fast.wistia.net/embed/iframe/535x1pej9e
+    assetType: video
       
   - name: DRY Code vs. Readability
     slug: dry-code
