add practice for analyses and seeds

--- a/_data/ondemand/modules/analyses-seeds.yml
+++ b/_data/ondemand/modules/analyses-seeds.yml
@@ -43,6 +43,12 @@ pages:
     assetName: false
     assetLink:
     assetType:
+
+  - name: Practice
+    slug: practice
+    assetName: false
+    assetLink:
+    assetType: 
       
   - name: Review
     slug: review
