jinja/update code snippets

--- a/_data/ondemand/modules/jinja-primer.yml
+++ b/_data/ondemand/modules/jinja-primer.yml
@@ -39,11 +39,11 @@ pages:
   - name: Practice
     slug: practice
 
+  - name: Exemplar
+    slug: exemplar
+
   - name: Review
     slug: review
-    assetName: false
-    assetLink: 
-    assetType:
 
   - name: Feedback
     slug: feedback
