--- a/_data/ondemand/modules/macros.yml
+++ b/_data/ondemand/modules/macros.yml
@@ -46,6 +46,9 @@ pages:
   - name: Practice
     slug: practice
 
+  - name: Exemplar
+    slug: exemplar
+
   - name: Review
     slug: review
     assetName: false
