--- a/_data/ondemand/modules/packages.yml
+++ b/_data/ondemand/modules/packages.yml
@@ -44,11 +44,11 @@ pages:
   - name: Practice
     slug: practice
 
+  - name: Exemplar
+    slug: exemplar
+
   - name: Review
     slug: review
-    assetName: false
-    assetLink:
-    assetType: 
 
   - name: Feedback
     slug: feedback
