Feature/on demand polish (#125)
* update review for analytics eng.

* update review for set up dbt cloud

* add dw setup lesson

* thumbnails

* add tve, incremental videos, snapshot page hold

* update materializations navigation yml

* fix front matter

* add practice to materializations

* add coming soon to materializations

* Add snapshot videos. Fix build

* snapshot thumbnails

* quick fix for embed code

* fix nav to include practice

* remove sql syntaxt highlighting for accessibility

* add/clean code snippets for practice

* write review copy

* add practice for analyses and seeds

* models/update code snippets

* tests/update code snippets

* tests/add exemplar page

* docs/update code snippets

* sources/update code snippets

* jinja/update code snippets

* macros/update code snippets

* packages/update code snippets

* packages/add table configuration

* analyses-seeds/update code snippets

* fix typos

* add spell check dictionary

* add loading data tutorial

* spell check on demand

Co-authored-by: Jeremy Cohen <jeremy@fishtownanalytics.com>

--- a/_data/ondemand/modules/analyses-seeds.yml
+++ b/_data/ondemand/modules/analyses-seeds.yml
@@ -49,7 +49,10 @@ pages:
     assetName: false
     assetLink:
     assetType: 
-      
+
+  - name: Exemplar
+    slug: exemplar
+    
   - name: Review
     slug: review
     assetName: false
