--- a/_data/links.yml
+++ b/_data/links.yml
@@ -1,4 +1,5 @@
-intros: https://docs.google.com/presentation/d/1gjL9ImUQOszWPUHMePn-A93_FrtIuSo8ICmEk0B8k-E/present ## Oct 14-15, 2020
-whiteboard: https://docs.google.com/document/d/1CfVUJVgVPRLQLAz_phihJwZAyPIOMJHJg25mxSB78d0/edit  ## Oct 14-15, 2020
-feedback: https://forms.gle/s9myuQtwxAqeU1Wn7  ## Oct 14-15, 2020
-office_hours: "Friday, Oct 23, 10-11 am PST"  ## Tentative
+## Public London Learn: Nov 18-19, 2020
+intros: https://docs.google.com/presentation/d/1yc6bJ-JdqIC-_8NyUu0j214VsI8YV91oQuyAin6NjYs/present
+whiteboard: https://docs.google.com/document/d/1fYd9YeocmmBHKOUiWfEN0B0zFhYzpABXJPo1_F4JI7A/edit
+feedback: https://forms.gle/YP4T4VbncWEsVkNc7
+office_hours: "Thursday, Dec 3, 4-5 pm GMT"
