add pages for js

--- a/_data/ondemand/modules/set-up-cloud.yml
+++ b/_data/ondemand/modules/set-up-cloud.yml
@@ -17,6 +17,9 @@ pages:
     assetLink:
     assetType: 
 
+  - name: dbt Cloud Architecture
+    slug: architecture
+
   - name: Setting up your Data Warehouse for Training
     slug: dw-setup
     assetName: Data Warehouse Set Up
