--- a/.gitmodules
+++ b/.gitmodules
@@ -1,7 +1,7 @@
 [submodule "www.getdbt.com"]
 	path = www.getdbt.com
 	url = git@github.com:fishtown-analytics/www.getdbt.com.git
-	branch = cloud
+	branch = master
 [submodule "reveal.js"]
 	path = reveal.js
 	url = https://github.com/hakimel/reveal.js.git
