Updated links for April 2021 public Learn

--- a/_data/links.yml
+++ b/_data/links.yml
@@ -1,6 +1,5 @@
-## Public East Coast Learn: March 24-25, 2021
-intros: https://docs.google.com/presentation/d/1pb3dIVtSbadZlaBju9lMnL4ZdRcX39LxF-G4-PjFaz0/edit?usp=sharing
-agenda: https://docs.google.com/spreadsheets/d/1MB9yFR_mY8amO7s5TszKF_CfBB5jl-mtRF_dj-zGXUE/edit?usp=sharing
-whiteboard: None
+## public Learn West Coast: April 7-8, 2021
+intros: https://docs.google.com/presentation/d/1D9BvZvVtcP_iu4MQW3s4-uNxPkz7Hu0T_BL9c8ZKhCU/edit?usp=sharing
+agenda: https://docs.google.com/spreadsheets/d/1VHIkR7xHR_8Smqx1IfCQmI-Gl7UrJKKSYOkOFwSxyhk/edit?usp=sharing
 feedback: https://forms.gle/5eeHnZwhSY3f7cJx7
-office_hours: "Wednesday, March 31 11-12 ET"
+office_hours: "Thursday, April 15 1:30-2:30 pm PT"
